deploy/argocd/argocd-networking-tls.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: argocd
  name: argocd-http-proxy
  namespace: argocd
spec:
  routes:
  - services:
    - name: argocd-server
      port: 443
  virtualhost:
    fqdn: argocd.tanzu.frankcarta.com
    tls:
      secretName: argocd-cert-secret
